@@ -191,8 +191,8 @@ setup(name="duplicity",
                              libraries=["rsync"])],
       scripts=['bin/rdiffdir', 'bin/duplicity'],
       data_files=data_files,
-      install_requires=['lockfile'],
-      tests_require=['lockfile', 'mock', 'pexpect'],
+      install_requires=['fasteners'],
+      tests_require=['fasteners', 'mock', 'pexpect'],
       test_suite='testing',
       cmdclass={'test': TestCommand,
                 'install': InstallCommand,
